# Personal_Portfolio

./: .env.coolify.example  .gitattributes  .gitignore  Dot2.txt  Dot_Art_img.txt  README.md  ccl_naeem.txt  data.md  docker-compose.yml
backend/: .dockerignore  .env - Copy.example  .env.example  .gitignore  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/.data/: portfolio.db
backend/alembic/: README  env.py
backend/alembic/versions/: 918698828ab8_init_schema_analytics_columns.py  a3c7b2d4e5f6_site_snapshots.py
backend/app/: config.py  db.py  deps.py  main.py  prestart.py  security.py  seed.py
backend/app/models/: __init__.py  analytics.py  blog.py  content.py  experience.py  message.py  project.py  snapshot.py  user.py
backend/app/routers/: analytics.py  auth.py  blog.py  content.py  health.py  messages.py  snapshots.py  uploads.py
backend/app/schemas/: analytics.py  auth.py  blog.py  content.py  message.py  snapshot.py
backend/app/services/: reading_time.py  snapshots.py
backend/seed-data/: blog.json  experience.json  hero.json  projects.json  settings.json
db/: Dockerfile  docker-entrypoint.sh  init.sql
frontend/: .dockerignore  .env.example  Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
frontend/app/(public)/: layout.tsx
frontend/components/: AnalyticsBoot.tsx  providers.tsx
frontend/lib/: cn.ts  env.ts  public-routes.ts  seo.ts
frontend/scripts/: bake-dot-art.mjs
(+100 files in other folders)
