[project]
name = "nas-portfolio-backend"
version = "1.0.0"
description = "FastAPI + MySQL backend for the Naeem Abdullah Sadik portfolio"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pymysql>=1.1.0",
  "cryptography>=43.0.0",         # required by PyMySQL for sha256_password / caching_sha2_password
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt==4.0.1",                # pin: passlib[bcrypt] is incompatible with bcrypt>=4.1
  "python-multipart>=0.0.9",
  "email-validator>=2.2.0",
  "httpx>=0.27.0",                # used by app.services.snapshots to crawl the public site
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.models", "app.schemas", "app.routers"]